parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ASPAS
    ASPASD
    AWAIT
    BOOLEAN
    BREAK
    BYTE
    CASE
    CATCH
    CHAR
    CLASS
    COMMENT
    COMMENTMULTI
    CONTINUE
    DEBUGGER
    DEFAULT
    DELETE
    DO
    DOUBLE
    EXPORT
    EXTENDS
    FINAL
    FINALLY
    HEXADECIMAL
    IMPORT
    IN
    INSTANCEOF
    INT
    LONG
    NEW
    NFLOAT
    NULL
    OCTAL
    PRIVATE
    PROTECTED
    PUBLIC
    SHORT
    STATIC
    SUPER
    SWITCH
    THIS
    THROW
    TRY
    TYPEOF
    WITH
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> funcdecl
Rule 2     program -> funcdecl program
Rule 3     program -> vardecl PV program
Rule 4     program -> call PV
Rule 5     program -> call PV program
Rule 6     program -> exp PV
Rule 7     program -> exp PV program
Rule 8     program -> stms
Rule 9     program -> stms program
Rule 10    vardecl -> tipodecl ID
Rule 11    vardecl -> tipodecl ID ATRIBUICAO exp
Rule 12    vardecl -> tipodecl ID LCOLCHETE INTEIRO RCOLCHETE
Rule 13    vardecl -> tipodecl ID ATRIBUICAO LCOLCHETE listexp RCOLCHETE
Rule 14    vardecl -> tipodecl ID LCOLCHETE INTEIRO RCOLCHETE ATRIBUICAO listexp
Rule 15    vardecl -> tipodecl ID ATRIBUICAO LCOLCHETE RCOLCHETE
Rule 16    funcdecl -> signature body
Rule 17    signature -> FUNCTION ID LPAREN sigParams RPAREN
Rule 18    sigParams -> ID
Rule 19    sigParams -> ID VIRGULA sigParams
Rule 20    body -> LCHAVES stms RCHAVES
Rule 21    stms -> stm
Rule 22    stms -> stm stms
Rule 23    stm -> vardecl PV
Rule 24    stm -> RETURN exp PV
Rule 25    stm -> exp PV
Rule 26    stm -> WHILE LPAREN exp RPAREN bodyorstm
Rule 27    stm -> FOR LPAREN opexp PV opexp PV opexp RPAREN bodyorstm
Rule 28    stm -> IF LPAREN exp RPAREN bodyorstm
Rule 29    stm -> IF LPAREN exp RPAREN bodyorstm ELSE bodyorstm
Rule 30    opexp -> exp
Rule 31    opexp -> VOID
Rule 32    bodyorstm -> body
Rule 33    bodyorstm -> stm
Rule 34    exp -> vardecl
Rule 35    exp -> exp SOMA exp
Rule 36    exp -> FALSE
Rule 37    exp -> TRUE
Rule 38    exp -> ID
Rule 39    exp -> FLOAT
Rule 40    exp -> INTEIRO
Rule 41    exp -> assign
Rule 42    exp -> call
Rule 43    exp -> exp TERNARIO1 exp TERNARIO2 exp
Rule 44    exp -> NEGACAO exp
Rule 45    exp -> exp OR exp
Rule 46    exp -> exp AND exp
Rule 47    exp -> exp MAIORIGUALQ exp
Rule 48    exp -> exp MENORIGUALQ exp
Rule 49    exp -> exp MENORQ exp
Rule 50    exp -> exp MAIORQ exp
Rule 51    exp -> exp DIFERENTEPACARAI exp
Rule 52    exp -> exp DIFERENTE exp
Rule 53    exp -> exp IGUALPACARAI exp
Rule 54    exp -> exp IGUAL exp
Rule 55    exp -> exp RESTOINCREMENT exp
Rule 56    exp -> exp DIVINCREMENT exp
Rule 57    exp -> exp MULTINCREMENT exp
Rule 58    exp -> exp DECREMENTN exp
Rule 59    exp -> exp INCREMENTN exp
Rule 60    exp -> exp DECREMENT
Rule 61    exp -> exp EXPONENCIACAO exp
Rule 62    exp -> exp INCREMENT
Rule 63    exp -> exp RESTO exp
Rule 64    exp -> exp MULT exp
Rule 65    exp -> exp DIV exp
Rule 66    exp -> exp SUB exp
Rule 67    exp -> STRING
Rule 68    call -> ID LPAREN params RPAREN
Rule 69    call -> ID LPAREN RPAREN
Rule 70    params -> exp VIRGULA params
Rule 71    params -> exp
Rule 72    assign -> ID ATRIBUICAO exp
Rule 73    tipodecl -> LET
Rule 74    tipodecl -> CONST
Rule 75    tipodecl -> VAR
Rule 76    listexp -> exp
Rule 77    listexp -> exp VIRGULA listexp

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 46
ASPAS                : 
ASPASD               : 
ATRIBUICAO           : 11 13 14 15 72
AWAIT                : 
BOOLEAN              : 
BREAK                : 
BYTE                 : 
CASE                 : 
CATCH                : 
CHAR                 : 
CLASS                : 
COMMENT              : 
COMMENTMULTI         : 
CONST                : 74
CONTINUE             : 
DEBUGGER             : 
DECREMENT            : 60
DECREMENTN           : 58
DEFAULT              : 
DELETE               : 
DIFERENTE            : 52
DIFERENTEPACARAI     : 51
DIV                  : 65
DIVINCREMENT         : 56
DO                   : 
DOUBLE               : 
ELSE                 : 29
EXPONENCIACAO        : 61
EXPORT               : 
EXTENDS              : 
FALSE                : 36
FINAL                : 
FINALLY              : 
FLOAT                : 39
FOR                  : 27
FUNCTION             : 17
HEXADECIMAL          : 
ID                   : 10 11 12 13 14 15 17 18 19 38 68 69 72
IF                   : 28 29
IGUAL                : 54
IGUALPACARAI         : 53
IMPORT               : 
IN                   : 
INCREMENT            : 62
INCREMENTN           : 59
INSTANCEOF           : 
INT                  : 
INTEIRO              : 12 14 40
LCHAVES              : 20
LCOLCHETE            : 12 13 14 15
LET                  : 73
LONG                 : 
LPAREN               : 17 26 27 28 29 68 69
MAIORIGUALQ          : 47
MAIORQ               : 50
MENORIGUALQ          : 48
MENORQ               : 49
MULT                 : 64
MULTINCREMENT        : 57
NEGACAO              : 44
NEW                  : 
NFLOAT               : 
NULL                 : 
OCTAL                : 
OR                   : 45
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PV                   : 3 4 5 6 7 23 24 25 27 27
RCHAVES              : 20
RCOLCHETE            : 12 13 14 15
RESTO                : 63
RESTOINCREMENT       : 55
RETURN               : 24
RPAREN               : 17 26 27 28 29 68 69
SHORT                : 
SOMA                 : 35
STATIC               : 
STRING               : 67
SUB                  : 66
SUPER                : 
SWITCH               : 
TERNARIO1            : 43
TERNARIO2            : 43
THIS                 : 
THROW                : 
TRUE                 : 37
TRY                  : 
TYPEOF               : 
VAR                  : 75
VIRGULA              : 19 70 77
VOID                 : 31
WHILE                : 26
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

assign               : 41
body                 : 16 32
bodyorstm            : 26 27 28 29 29
call                 : 4 5 42
exp                  : 6 7 11 24 25 26 28 29 30 35 35 43 43 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 61 62 63 63 64 64 65 65 66 66 70 71 72 76 77
funcdecl             : 1 2
listexp              : 13 14 77
opexp                : 27 27 27
params               : 68 70
program              : 2 3 5 7 9 0
sigParams            : 17 19
signature            : 16
stm                  : 21 22 33
stms                 : 8 9 20 22
tipodecl             : 10 11 12 13 14 15
vardecl              : 3 23 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . vardecl PV program
    (4) program -> . call PV
    (5) program -> . call PV program
    (6) program -> . exp PV
    (7) program -> . exp PV program
    (8) program -> . stms
    (9) program -> . stms program
    (16) funcdecl -> . signature body
    (10) vardecl -> . tipodecl ID
    (11) vardecl -> . tipodecl ID ATRIBUICAO exp
    (12) vardecl -> . tipodecl ID LCOLCHETE INTEIRO RCOLCHETE
    (13) vardecl -> . tipodecl ID ATRIBUICAO LCOLCHETE listexp RCOLCHETE
    (14) vardecl -> . tipodecl ID LCOLCHETE INTEIRO RCOLCHETE ATRIBUICAO listexp
    (15) vardecl -> . tipodecl ID ATRIBUICAO LCOLCHETE RCOLCHETE
    (68) call -> . ID LPAREN params RPAREN
    (69) call -> . ID LPAREN RPAREN
    (34) exp -> . vardecl
    (35) exp -> . exp SOMA exp
    (36) exp -> . FALSE
    (37) exp -> . TRUE
    (38) exp -> . ID
    (39) exp -> . FLOAT
    (40) exp -> . INTEIRO
    (41) exp -> . assign
    (42) exp -> . call
    (43) exp -> . exp TERNARIO1 exp TERNARIO2 exp
    (44) exp -> . NEGACAO exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp AND exp
    (47) exp -> . exp MAIORIGUALQ exp
    (48) exp -> . exp MENORIGUALQ exp
    (49) exp -> . exp MENORQ exp
    (50) exp -> . exp MAIORQ exp
    (51) exp -> . exp DIFERENTEPACARAI exp
    (52) exp -> . exp DIFERENTE exp
    (53) exp -> . exp IGUALPACARAI exp
    (54) exp -> . exp IGUAL exp
    (55) exp -> . exp RESTOINCREMENT exp
    (56) exp -> . exp DIVINCREMENT exp
    (57) exp -> . exp MULTINCREMENT exp
    (58) exp -> . exp DECREMENTN exp
    (59) exp -> . exp INCREMENTN exp
    (60) exp -> . exp DECREMENT
    (61) exp -> . exp EXPONENCIACAO exp
    (62) exp -> . exp INCREMENT
    (63) exp -> . exp RESTO exp
    (64) exp -> . exp MULT exp
    (65) exp -> . exp DIV exp
    (66) exp -> . exp SUB exp
    (67) exp -> . STRING
    (21) stms -> . stm
    (22) stms -> . stm stms
    (17) signature -> . FUNCTION ID LPAREN sigParams RPAREN
    (73) tipodecl -> . LET
    (74) tipodecl -> . CONST
    (75) tipodecl -> . VAR
    (72) assign -> . ID ATRIBUICAO exp
    (23) stm -> . vardecl PV
    (24) stm -> . RETURN exp PV
    (25) stm -> . exp PV
    (26) stm -> . WHILE LPAREN exp RPAREN bodyorstm
    (27) stm -> . FOR LPAREN opexp PV opexp PV opexp RPAREN bodyorstm
    (28) stm -> . IF LPAREN exp RPAREN bodyorstm
    (29) stm -> . IF LPAREN exp RPAREN bodyorstm ELSE bodyorstm

    ID              shift and go to state 9
    FALSE           shift and go to state 11
    TRUE            shift and go to state 12
    FLOAT           shift and go to state 13
    INTEIRO         shift and go to state 10
    NEGACAO         shift and go to state 15
    STRING          shift and go to state 16
    FUNCTION        shift and go to state 18
    LET             shift and go to state 19
    CONST           shift and go to state 20
    VAR             shift and go to state 21
    RETURN          shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 25

    program                        shift and go to state 1
    funcdecl                       shift and go to state 2
    vardecl                        shift and go to state 3
    call                           shift and go to state 4
    exp                            shift and go to state 5
    stms                           shift and go to state 6
    signature                      shift and go to state 7
    tipodecl                       shift and go to state 8
    assign                         shift and go to state 14
    stm                            shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> funcdecl .
    (2) program -> funcdecl . program
    (1) program -> . funcdecl
    (2) program -> . funcdecl program
    (3) program -> . vardecl PV program
    (4) program -> . call PV
    (5) program -> . call PV program
    (6) program -> . exp PV
    (7) program -> . exp PV program
    (8) program -> . stms
    (9) program -> . stms program
    (16) funcdecl -> . signature body
    (10) vardecl -> . tipodecl ID
    (11) vardecl -> . tipodecl ID ATRIBUICAO exp
    (12) vardecl -> . tipodecl ID LCOLCHETE INTEIRO RCOLCHETE
    (13) vardecl -> . tipodecl ID ATRIBUICAO LCOLCHETE listexp RCOLCHETE
    (14) vardecl -> . tipodecl ID LCOLCHETE INTEIRO RCOLCHETE ATRIBUICAO listexp
    (15) vardecl -> . tipodecl ID ATRIBUICAO LCOLCHETE RCOLCHETE
    (68) call -> . ID LPAREN params RPAREN
    (69) call -> . ID LPAREN RPAREN
    (34) exp -> . vardecl
    (35) exp -> . exp SOMA exp
    (36) exp -> . FALSE
    (37) exp -> . TRUE
    (38) exp -> . ID
    (39) exp -> . FLOAT
    (40) exp -> . INTEIRO
    (41) exp -> . assign
    (42) exp -> . call
    (43) exp -> . exp TERNARIO1 exp TERNARIO2 exp
    (44) exp -> . NEGACAO exp
    (45) exp -> . exp OR exp
    (46) exp -> . exp AND exp
    (47) exp -> . exp MAIORIGUALQ exp
    (48) exp -> . exp MENORIGUALQ exp
    (49) exp -> . exp MENORQ exp
    (50) exp -> . exp MAIORQ exp
    (51) exp -> . exp DIFERENTEPACARAI exp
    (52) exp -> . exp DIFERENTE exp
    (53) exp -> . exp IGUALPACARAI exp
    (54) exp -> . exp IGUAL exp
    (55) exp -> . exp RESTOINCREMENT exp
    (56) exp -> . exp DIVINCREMENT exp
    (57) exp -> . exp MULTINCREMENT exp
    (58) exp -> . exp DECREMENTN exp
    (59) exp -> . exp INCREMENTN exp
    (60) exp -> . exp DECREMENT
    (61) exp -> . exp EXPONENCIACAO exp
    (62) exp -> . exp INCREMENT
    (63) exp -> . exp RESTO exp
    (64) exp -> . exp MULT exp
    (65) exp -> . exp DIV exp
    (66) exp -> . exp SUB exp
    (67) exp -> . STRING
    (21) stms -> . stm
    (22) stms -> . stm stms
    (17) signature -> . FUNCTION ID LPAREN sigParams RPAREN
    (73) tipodecl -> . LET
    (74) tipodecl -> . CONST
    (75) tipodecl -> . VAR
    (72) assign -> . ID ATRIBUICAO exp
    (23) stm -> . vardecl PV
    (24) stm -> . RETURN exp PV
    (25) stm -> . exp PV
    (26) stm -> . WHILE LPAREN exp RPAREN bodyorstm
    (27) stm -> . FOR LPAREN opexp PV opexp PV opexp RPAREN bodyorstm
    (28) stm -> . IF LPAREN exp RPAREN bodyorstm
    (29) stm -> . IF LPAREN exp RPAREN bodyorstm ELSE bodyorstm

    $end            reduce using rule 1 (program -> funcdecl .)
    ID              shift and go to state 9
    FALSE           shift and go to state 11
    TRUE            shift and go to state 12
    FLOAT           shift and go to state 13
    INTEIRO         shift and go to state 10
    NEGACAO         shift and go to state 15
    STRING          shift and go to state 16
    FUNCTION        shift and go to state 18
    LET             shift and go to state 19
    CONST           shift and go to state 20
    VAR             shift and go to state 21
    RETURN          shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 25

    funcdecl                       shift and go to state 2
    program                        shift and go to state 26
    vardecl                        shift and go to state 3
    call                           shift and go to state 4
    exp                            shift and go to state 5
    stms                           shift and go to state 6
    signature                      shift and go to state 7
    tipodecl                       shift and go to state 8
    assign                         shift and go to state 14
    stm                            shift and go to state 17

state 3

    (3) program -> vardecl . PV program
    (34) exp -> vardecl .
    (23) stm -> vardecl . PV

  ! shift/reduce conflict for PV resolved as shift
    PV              shift and go to state 27
    SOMA            reduce using rule 34 (exp -> vardecl .)
    TERNARIO1       reduce using rule 34 (exp -> vardecl .)
    OR              reduce using rule 34 (exp -> vardecl .)
    AND             reduce using rule 34 (exp -> vardecl .)
    MAIORIGUALQ     reduce using rule 34 (exp -> vardecl .)
    MENORIGUALQ     reduce using rule 34 (exp -> vardecl .)
    MENORQ          reduce using rule 34 (exp -> vardecl .)
    MAIORQ          reduce using rule 34 (exp -> vardecl .)
    DIFERENTEPACARAI reduce using rule 34 (exp -> vardecl .)
    DIFERENTE       reduce using rule 34 (exp -> vardecl .)
    IGUALPACARAI    reduce using rule 34 (exp -> vardecl .)
    IGUAL           reduce using rule 34 (exp -> vardecl .)
    RESTOINCREMENT  reduce using rule 34 (exp -> vardecl .)
    DIVINCREMENT    reduce using rule 34 (exp -> vardecl .)
    MULTINCREMENT   reduce using rule 34 (exp -> vardecl .)
    DECREMENTN      reduce using rule 34 (exp -> vardecl .)
    INCREMENTN      reduce using rule 34 (exp -> vardecl .)
    DECREMENT       reduce using rule 34 (exp -> vardecl .)
    EXPONENCIACAO   reduce using rule 34 (exp -> vardecl .)
    INCREMENT       reduce using rule 34 (exp -> vardecl .)
    RESTO           reduce using rule 34 (exp -> vardecl .)
    MULT            reduce using rule 34 (exp -> vardecl .)
    DIV             reduce using rule 34 (exp -> vardecl .)
    SUB             reduce using rule 34 (exp -> vardecl .)

  ! PV              [ reduce using rule 34 (exp -> vardecl .) ]


state 4

    (4) program -> call . PV
    (5) program -> call . PV program
    (42) exp -> call .

  ! shift/reduce conflict for PV resolved as shift
    PV              shift and go to state 28
    SOMA            reduce using rule 42 (exp -> call .)
    TERNARIO1       reduce using rule 42 (exp -> call .)
    OR              reduce using rule 42 (exp -> call .)
    AND             reduce using rule 42 (exp -> call .)
    MAIORIGUALQ     reduce using rule 42 (exp -> call .)
    MENORIGUALQ     reduce using rule 42 (exp -> call .)
    MENORQ          reduce using rule 42 (exp -> call .)
    MAIORQ          reduce using rule 42 (exp -> call .)
    DIFERENTEPACARAI reduce using rule 42 (exp -> call .)
    DIFERENTE       reduce using rule 42 (exp -> call .)
    IGUALPACARAI    reduce using rule 42 (exp -> call .)
    IGUAL           reduce using rule 42 (exp -> call .)
    RESTOINCREMENT  reduce using rule 42 (exp -> call .)
    DIVINCREMENT    reduce using rule 42 (exp -> call .)
    MULTINCREMENT   reduce using rule 42 (exp -> call .)
    DECREMENTN      reduce using rule 42 (exp -> call .)
    INCREMENTN      reduce using rule 42 (exp -> call .)
    DECREMENT       reduce using rule 42 (exp -> call .)
    EXPONENCIACAO   reduce using rule 42 (exp -> call .)
    INCREMENT       reduce using rule 42 (exp -> call .)
    RESTO           reduce using rule 42 (exp -> call .)
    MULT            reduce using rule 42 (exp -> call .)
    DIV             reduce using rule 42 (exp -> call .)
    SUB             reduce using rule 42 (exp -> call .)

  ! PV              [ reduce using rule 42 (exp -> call .) ]


state 5

    (6) program -> exp . PV
    (7) program -> exp . PV program
    (35) exp -> exp . SOMA exp
    (43) exp -> exp . TERNARIO1 exp TERNARIO2 exp
    (45) exp -> exp . OR exp
    (46) exp -> exp . AND exp
    (47) exp -> exp . MAIORIGUALQ exp
    (48) exp -> exp . MENORIGUALQ exp
    (49) exp -> exp . MENORQ exp
    (50) exp -> exp . MAIORQ exp
    (51) exp -> exp . DIFERENTEPACARAI exp
    (52) exp -> exp . DIFERENTE exp
    (53) exp -> exp . IGUALPACARAI exp
    (54) exp -> exp . IGUAL exp
    (55) exp -> exp . RESTOINCREMENT exp
    (56) exp -> exp . DIVINCREMENT exp
    (57) exp -> exp . MULTINCREMENT exp
    (58) exp -> exp . DECREMENTN exp
    (59) exp -> exp . INCREMENTN exp
    (60) exp -> exp . DECREMENT
    (61) exp -> exp . EXPONENCIACAO exp
    (62) exp -> exp . INCREMENT
    (63) exp -> exp . RESTO exp
    (64) exp -> exp . MULT exp
    (65) exp -> exp . DIV exp
    (66) exp -> exp . SUB exp
    (25) stm -> exp . PV

    PV              shift and go to state 29
    SOMA            shift and go to state 30
    TERNARIO1       shift and go to state 31
    OR              shift and go to state 32
    AND             shift and go to state 33
    MAIORIGUALQ     shift and go to state 34
    MENORIGUALQ     shift and go to state 35
    MENORQ          shift and go to state 36
    MAIORQ          shift and go to state 37
    DIFERENTEPACARAI shift and go to state 38
    DIFERENTE       shift and go to state 39
    IGUALPACARAI    shift and go to state 40
    IGUAL           shift and go to state 41
    RESTOINCREMENT  shift and go to state 42
    DIVINCREMENT    shift and go to state 43
    MULTINCREMENT   shift and go to state 44
    DECREMENTN      shift and go to state 45
    INCREMENTN      shift and go to state 46
    DECREMENT       shift and go to state 47
    EXPONENCIACAO   shift and go to state 48
    INCREMENT       shift and go to state 49
    RESTO           shift and go to state 50
    MULT            shift and go to state 51
    DIV             shift and go to state 52
    SUB             shift and go to state 53


state 6

    (8) program -> stms .
